syntax = "proto3";

package protoclasses;

option java_outer_classname = "FunctionProto";

message FunctionMessage{
  string name = 1;
  string entry_point = 2;
  string decompiled = 3;

  message ParameterMessage{
    string name = 1;
    string data_type = 2;
    uint32 length = 3;
    repeated string registers = 4;
  }

  message VariableMessage{
    string name = 1;
    string data_type = 2;
    uint32 length = 3;
    int32 stack_offset = 4;
    repeated string registers = 5;
  }

  message BasicBlockMessage{
    oneof starting_address {
        uint64 long_starting_address = 1;
        string symbolic_starting_address = 2;
    }
    
    oneof ending_address {
        uint64 long_ending_address = 3;
        string symbolic_ending_address = 4;
    }
    
    message InstructionMessage{
      string mnemonic = 1;
      bool is_thumb = 2;
      
      message OperandMessage{
        string name = 1;
        
        message OperandObject{
            string name = 1;
            
            enum Type {
                NULL = 0;
                REGISTER = 1;
                SCALAR = 2;
                ADDRESS = 3;
            }

            Type type = 2;
        }
        
        repeated int32 reference_id = 2;
        repeated OperandObject op_objects = 3;
      }
      
      repeated OperandMessage operands = 3;
    }

    repeated InstructionMessage instructions = 5;
  }

  repeated ParameterMessage parameters = 4;
  repeated VariableMessage variables = 5;
  repeated BasicBlockMessage basic_blocks = 6;
}

message FunctionsList{
    repeated FunctionMessage functions = 1;
}
