syntax = "proto3";

package protoclasses;

option java_outer_classname = "SymbolsProto";

message SymbolMessage {
  string name = 1;
  
  oneof address {
    uint64 long_address = 2;
    string symbolic_address = 3;
  }
    
  enum SymbolMessageType{
    NULL = 0;
    LABEL = 1;
    LIBRARY = 2;
    NAMESPACE = 3;
    CLASS = 4;
    FUNCTION = 5;
    PARAMETER = 6;
    LOCAL_VAR = 7;
    GLOBAL_VAR = 8;
  }
  
  SymbolMessageType type = 4;

  string namespace = 5;
  
  enum SourceType{
    DEFAULT = 0;
    ANALYSIS = 1;
    IMPORTED = 2;
    USER_DEFINED = 3;
  }  
  
  SourceType source = 6;
  repeated int32 reference_id = 8;
}

message SymbolsList {
  repeated SymbolMessage symbols = 1;
}
